--- a/contact.html
+++ b/contact.html
@@ -16,52 +16,51 @@
 </head>
 
 <body class="bg-gray-50 text-gray-800 relative">
-<aside id="sidebar"
-    class="fixed top-0 right-0 w-72 h-full bg-white shadow-lg transform translate-x-full transition-transform duration-300 z-50">
-    <div class="p-4 border-b flex justify-between items-center">
-      <div class="flex items-center space-x-4">
-        <img src="static/assets/images/ezydevs logo.png" alt="Ezydevs Tech Logo" class="h-15 w-20 rounded-full" />
-    </div>
-      <button onclick="toggleSidebar()" class="text-gray-600 hover:text-red-500 text-xl">&times;</button>
-    </div>
-    <div class="p-4">
-      <input type="text" placeholder="Search..."
-        class="w-full px-4 py-2 mb-4 border border-gray-300 rounded focus:ring focus:ring-blue-200" />
-      <ul class="space-y-3">
-        <li><a href="#" class="block text-gray-700 hover:text-blue-600">Home</a></li>
-        <li><a href="#features" class="block text-gray-700 hover:text-blue-600">Features</a></li>
-        <li><a href="#about" class="block text-gray-700 hover:text-blue-600">About</a></li>
-        <li><a href="#contact" class="block text-gray-700 hover:text-blue-600">Contact</a></li>
-      </ul>
-    </div>
-  </aside>
+  <aside id="sidebar"
+  class="fixed top-0 right-0 w-72 h-full bg-white shadow-lg transform translate-x-full transition-transform duration-300 z-50">
+  <div class="p-4 border-b flex justify-between items-center">
+    <h2 class="text-lg font-semibold text-blue-600">Sidebar Menu</h2>
+    <button onclick="toggleSidebar()" class="text-gray-600 hover:text-red-500 text-xl">&times;</button>
+  </div>
+  <div class="p-4">
+    <input type="text" placeholder="Search..."
+      class="w-full px-4 py-2 mb-4 border border-gray-300 rounded focus:ring focus:ring-blue-200" />
+    <ul class="space-y-3">
+      <li><a href="/" class="block text-gray-700 hover:text-blue-600">Home</a></li>
+      <li><a href="services.html" class="block text-gray-700 hover:text-blue-600">Features</a></li>
+      <li><a href="about.html" class="block text-gray-700 hover:text-blue-600">About</a></li>
+      <li><a href="contact.html" class="block text-gray-700 hover:text-blue-600">Contact</a></li>
+    </ul>
+  </div>
+</aside>
 
-  <!-- Navbar -->
-  <header class="bg-white shadow-md fixed top-0 w-full z-10">
-    <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
+<!-- Navbar -->
+<header class="bg-white shadow-md fixed top-0 w-full z-10">
+  <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
       <div class="flex items-center space-x-4">
-        <img src="static/assets/images/ezydevs logo.png" alt="Ezydevs Tech Logo" class="h-15 w-20 rounded-full" />
-    </div>
-      <!-- {% for message in messages %}
-      <div class="text-1xl alert max-w-4xl bg-white-500 p-2 rounded">
-        <p class="text-red-500">{{message}}</p>
+          <img src="static/assets/images/ezydevs logo.png" alt="Ezydevs Tech Logo" class="h-15 w-20 rounded-full" />
       </div>
-      {% endfor %} -->
-      <nav class="hidden md:flex space-x-4">
-        <a href="#" class="text-gray-700 hover:text-blue-600">Home</a>
-        <a href="#features" class="text-gray-700 hover:text-blue-600">Features</a>
-        <a href="#about" class="text-gray-700 hover:text-blue-600">About</a>
-        <a href="#contact" class="text-gray-700 hover:text-blue-600">Contact</a>
-        <!-- {% if request.user.is_authenticated %}
-        <a href="{% url 'logout_user' %}" class="bg-red-600 text-white px-4 py-2 rounded hover:bg-red-700">Logout</a>
-        {% else %} -->
-        <a href="{% url 'login_user' %}" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">Login</a>
-        <!-- {% endif %} -->
-      </nav>
-      <!-- Mobile Sidebar Toggle -->
-      <button class="md:hidden text-2xl text-gray-600 hover:text-blue-600" onclick="toggleSidebar()">&#9776;</button>
+    <!-- {% for message in messages %}
+    <div class="text-1xl alert max-w-4xl bg-white-500 p-2 rounded">
+      <p class="text-red-500">{{message}}</p>
     </div>
-  </header>
+    {% endfor %} -->
+    <nav class="hidden md:flex space-x-4">
+      <a href="/index.html" class="text-gray-700 hover:text-blue-600">Home</a>
+      <a href="#testimonials" class="text-gray-700 hover:text-blue-600">Testimonials</a>
+      <a href="services.html" class="text-gray-700 hover:text-blue-600">Services</a>
+      <a href="about.html" class="text-gray-700 hover:text-blue-600">About</a>
+      <a href="contact.html" class="text-gray-700 hover:text-blue-600">Contact</a>
+      <!-- {% if request.user.is_authenticated %}
+      <a href="{% url 'logout_user' %}" class="bg-red-600 text-white px-4 py-2 rounded hover:bg-red-700">Logout</a>
+      {% else %} -->
+      <a href="{% url 'login_user' %}" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">Login</a>
+      <!-- {% endif %} -->
+    </nav>
+    <!-- Mobile Sidebar Toggle -->
+    <button class="md:hidden text-2xl text-gray-600 hover:text-blue-600" onclick="toggleSidebar()">&#9776;</button>
+  </div>
+</header>
 <!-- Contact Page -->
 <section class="bg-gray-50 py-20">
     <div class="container mx-auto px-6">
