--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
       <input type="text" placeholder="Search..."
         class="w-full px-4 py-2 mb-4 border border-gray-300 rounded focus:ring focus:ring-blue-200" />
       <ul class="space-y-3">
-        <li><a href="#" class="block text-gray-700 hover:text-blue-600">Home</a></li>
-        <li><a href="#features" class="block text-gray-700 hover:text-blue-600">Features</a></li>
-        <li><a href="#about" class="block text-gray-700 hover:text-blue-600">About</a></li>
-        <li><a href="#contact" class="block text-gray-700 hover:text-blue-600">Contact</a></li>
+        <li><a href="/" class="block text-gray-700 hover:text-blue-600">Home</a></li>
+        <li><a href="services.html" class="block text-gray-700 hover:text-blue-600">Features</a></li>
+        <li><a href="about.html" class="block text-gray-700 hover:text-blue-600">About</a></li>
+        <li><a href="contact.html" class="block text-gray-700 hover:text-blue-600">Contact</a></li>
       </ul>
     </div>
   </aside>
@@ -44,10 +44,11 @@
       </div>
       {% endfor %} -->
       <nav class="hidden md:flex space-x-4">
-        <a href="#" class="text-gray-700 hover:text-blue-600">Home</a>
-        <a href="#features" class="text-gray-700 hover:text-blue-600">Features</a>
-        <a href="#about" class="text-gray-700 hover:text-blue-600">About</a>
-        <a href="#contact" class="text-gray-700 hover:text-blue-600">Contact</a>
+        <a href="/index.html" class="text-gray-700 hover:text-blue-600">Home</a>
+        <a href="#testimonials" class="text-gray-700 hover:text-blue-600">Testimonials</a>
+        <a href="services.html" class="text-gray-700 hover:text-blue-600">Services</a>
+        <a href="about.html" class="text-gray-700 hover:text-blue-600">About</a>
+        <a href="contact.html" class="text-gray-700 hover:text-blue-600">Contact</a>
         <!-- {% if request.user.is_authenticated %}
         <a href="{% url 'logout_user' %}" class="bg-red-600 text-white px-4 py-2 rounded hover:bg-red-700">Logout</a>
         {% else %} -->
